Fixed Content Warning not visible when landing site is not at the top of a page.

--- a/extensions/wikia/ContentWarning/css/ContentWarning.scss
+++ b/extensions/wikia/ContentWarning/css/ContentWarning.scss
@@ -44,7 +44,6 @@
 		#bodyContent {
 			overflow: hidden;
 			visibility: hidden;
-			width: 0;
 		}
 	}
 
@@ -52,12 +51,12 @@
 	.WikiaRail {
 		overflow: hidden;
 		visibility: hidden;
-		width: 0;
 	}
 
 	.ContentWarning {
-		display: block;
-	}
+        display: block;
+        position: fixed;
+    }
 
 	.adm-dash-search,
 	.WikiaWideTablesWrapper {
